[gd_scene load_steps=10 format=2]

[ext_resource path="res://objects/space_flying_bodies/SpaceFlyingBody.gd" type="Script" id=1]
[ext_resource path="res://actors/particle.png" type="Texture" id=2]
[ext_resource path="res://objects/DragArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/space_flying_bodies/comet/colliding.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 35.2124

[sub_resource type="Curve" id=2]
max_value = 1.5
_data = [ Vector2( 0, 0.736364 ), 0.0, 2.11622, 0, 0, Vector2( 0.993856, 1.27572 ), -0.287657, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.402703, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=4]
resource_name = "SETUP"
tracks/0/type = "value"
tracks/0/path = NodePath("Core:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Tail:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "explode"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Tail:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Core:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("SFX")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[node name="SpaceFlyingBody" type="KinematicBody2D" groups=[
"flying_body",
]]
script = ExtResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
playing = true

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -16.0
bus = "SFX"

[node name="Tail" type="CPUParticles2D" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
amount = 5
local_coords = false
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 32.0
flag_align_y = true
direction = Vector2( -1, 0 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.42
linear_accel = 8.0
scale_amount = 0.5
scale_amount_random = 1.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="Core" type="CPUParticles2D" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
amount = 4
local_coords = false
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 32.0
flag_align_y = true
direction = Vector2( -1, 0 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.42
linear_accel = 8.0
scale_amount = 0.5
scale_amount_random = 1.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 4.8, 4.8 )

[node name="DragArea" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "SETUP"
anims/SETUP = SubResource( 4 )
anims/explode = SubResource( 5 )
[connection signal="collided" from="." to="." method="_on_collided"]
[connection signal="screen_exited" from="Visibility" to="." method="queue_free"]
[connection signal="dragged" from="DragArea" to="." method="_on_DragArea_dragged"]
[connection signal="dragging" from="DragArea" to="." method="_on_DragArea_dragging"]
